# discord_bot

./: .gitignore  LICENSE  README.md  config.json  links.json  main.py  papuchos.sql  pyproject.toml  requirements.txt  respuesta.html  scraper.py  strimers.json  test_news.py  twitch.py  users.py
