[tool.poetry]
name = "repl_python3_beta_Chismestrum"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
selenium = "^3.141.0"
discord = "^1.7.3"
discord-py-slash-command = "^3.0.1"
discord-command = "^0.0.2"
discord-py-interactions = "^3.0.2"
replit = "^3.2.4"
pip = "^22.0.4"
pip-upgrader = "^1.4.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
